<resources>
    <string name="app_name">Data Mahasiswa</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">Nama</string>
    <string name="kelas">kelas</string>
    <string name="npm">Npm</string>
    <string name="alamat">Alamat</string>
    <string name="proses">proses</string>
    <string name="hapus">Hapus</string>
</resources>
