<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Update_Activity">

        <EditText
            android:id="@+id/update_nama"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/corner"
            android:hint="@string/nama"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/update_kelas"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner"
            android:hint="@string/kelas"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/update_npm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner"
            android:hint="@string/npm"
            android:paddingLeft="5dp" />

        <EditText
            android:gravity="left"
            android:id="@+id/update_alamat"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner"
            android:hint="@string/alamat"
            android:padding="5dp" />

        <Button
           android:id="@+id/buttonup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proses" />
        <Button
            android:id="@+id/buttonhapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hapus"
            />




</LinearLayout>