<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    tools:context=".fragment.PostFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/corner"
            android:hint="@string/nama"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/edt_kelas"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner"
            android:hint="@string/kelas"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/edt_npm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner"
            android:hint="@string/npm"
            android:paddingLeft="5dp" />

        <EditText
            android:gravity="left"
            android:id="@+id/edt_alamat"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner"
            android:hint="@string/alamat"
            android:padding="5dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proses" />

    </LinearLayout>


</FrameLayout>